# object-detection

./: .gitignore  README.md  ssd.py
cpp/: CMakeLists.txt  ssd.cpp  yolo.cpp
python/: ssd.py  yolo.py
