cmake_minimum_required( VERSION 3.7 )
project( yolo )
find_package( OpenCV REQUIRED )
find_package( PythonLibs 3.5 REQUIRED )
include_directories( include ${OpenCV_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin )
set( CMAKE_CXX_STANDARD 11 )
add_executable(yolo ssd.cpp)
target_link_libraries( yolo ${OpenCV_LIBS} ${PYTHON_LIBRARIES} )
